--- a/colorGame.html
+++ b/colorGame.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Color Game</title>
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
 
 </head>
 <body>
@@ -17,6 +18,7 @@
 		<span id="message"></span>
 		<button class="mode">easy</button>
 		<button class="mode selected">hard</button>
+		<span id="streak"></span>
 		
 	</div>
 
